--- a/amxx/configs/DiveBanX/diveban.cfg
+++ b/amxx/configs/DiveBanX/diveban.cfg
@@ -23,7 +23,7 @@ divebans_user  	""
 divebans_pass  	""
 divebans_db 	""
 
-divebans_table  "divebans"
+divebans_table  "divebanx"
 
 // Поддержка CsBans | CSBans support
 divebans_support_csbans "0"
