--- a/amxx/Bonus/AfterBan/configs/AfterBan.cfg
+++ b/amxx/Bonus/AfterBan/configs/AfterBan.cfg
@@ -1,4 +1,4 @@
-﻿// AfterBan 2017
+﻿// [AfterBan 2021]
 
 // Загружать ли админов с веб-сайта(если его нет, поставьте 0)
 af_admin_on "0"
@@ -25,3 +25,6 @@ af_freeze_player "1"
 
 // отнять оружие
 af_strip_player "1"
+
+// Отображение сообщения о бане (0 - чат, 1 - худ, 2 - чат +  худ)
+af_ban_message_type "2"
