--- a/amxx/configs/DiveBanX/console_message.ini
+++ b/amxx/configs/DiveBanX/console_message.ini
@@ -25,6 +25,10 @@
 # %date_of_ban%
 # %date_of_unban%
 
+# %plugin_name%
+# %plugin_version%
+
+-------------[%plugin_name% %plugin_version%]-------------
 Вы были забанены
 Ник: %player_name%
 IP: %player_ip%
@@ -36,3 +40,4 @@ IP: %player_ip%
 Бан истекает через: %expired_time%
 Дата разбана: %date_of_unban%
 Если считаете что вас забанили случайно посетите: vk.com
+-------------[%plugin_name% %plugin_version%]-------------
