add php 7.4 support a

--- a/amxx/configs/DiveBanX/diveban.cfg
+++ b/amxx/configs/DiveBanX/diveban.cfg
@@ -1,7 +1,6 @@
 ﻿//	DiveBan X 2019
 
-// Серийный номер плагина | Serial Number
-// Вставьте сюда ключ | Put key in this cvar
+// LEAVE EMPTY! Plugin is free for use
 License_Key ""
 
 // Секретный код | Secret Key
